--- a/EFC2.0/Pages/self_service/my_profile/experience.cshtml
+++ b/EFC2.0/Pages/self_service/my_profile/experience.cshtml
@@ -5,5 +5,200 @@
 <div class="app-container" dir="ltr">
     <div class="container-fluid px-0 main-content-page h-100">
         <partial name="self_service_tabs" />
+
+        <div class="aos-init aos-animate">
+            <div class="child-content nav-active-top" id="summary">
+                <ul class="topnav-child-1">
+                    <li><a href="/self_service/my_profile/basic"> Basic Details</a> </li>
+                    <li class="nav-active-top"><a href="/self_service/my_profile/experience"> My Experience</a> </li>
+                    <li><a href="/self_service/my_profile/contract"> My Contracts</a> </li>
+                    <li><a href="/self_service/my_profile/my_documents/pro"> My Documents</a></li>
+                    <li><a href="/self_service/my_profile/reporting_manager"> Reporting Manager</a></li>
+                </ul>
+                <div class="container-fluid p-3">
+                    <div class="grand-child nav-active-top">
+                        <div class="ng-star-inserted">
+                            <div class="page-title-h">
+                                <div class="d-flex justify-content-start align-items-center">
+                                    <mat-icon role="img" class="mat-icon notranslate text-muted material-icons mat-icon-no-color" style="cursor: pointer;">chevron_left </mat-icon>
+                                    <h4 class="card-title m-0 card-heading">My Experience</h4>
+                                </div>
+                            </div>
+                            <mat-card class="mat-card mat-focus-indicator b-shadow-none border-0">
+                                <div class="container-fluid py-0 px-0">
+                                    <div class="row align-items-center">
+                                        <div class="col-md-12 d-flex justify-content-end align-items-center">
+                                            <div style="position: relative;">
+                                                <input type="text" class="grid-search-box ng-untouched ng-pristine ng-valid" placeholder="Search">
+                                                <mat-icon role="img" class="mat-icon notranslate search-icon material-icons mat-icon-no-color" aria-hidden="true" data-mat-icon-type="font">search</mat-icon>
+                                            </div>
+                                            <button data-bs-toggle="modal" data-bs-target="#addExperienceModal" type="button" class="mat-ripple p-element rd-round-button"><img src="~/images/add.svg"></button>
+                                        </div>
+                                    </div>
+                                    <div class="col-12 px-0">
+                                        <div class="ng-star-inserted">
+                                            <div class="example-table-container rd-table-wrapper">
+                                                <table class="mat-table cdk-table">
+                                                    <thead role="rowgroup">
+                                                        <tr class="mat-header-row cdk-header-row ng-star-inserted">
+                                                            <th class="mat-header-cell cdk-header-cell text-capitalize cdk-column-college mat-column-college ng-star-inserted mat-table-sticky mat-table-sticky-border-elem-top"> Organization </th>
+                                                            <th class="mat-header-cell cdk-header-cell cdk-column-courseName mat-column-courseName ng-star-inserted mat-table-sticky mat-table-sticky-border-elem-top">Designation </th>
+                                                            <th class="mat-header-cell cdk-header-cell cdk-column-period mat-column-period ng-star-inserted mat-table-sticky mat-table-sticky-border-elem-top">Period</th>
+                                                            <th class="mat-header-cell cdk-header-cell text-capitalize cdk-column-passGrade mat-column-passGrade ng-star-inserted mat-table-sticky mat-table-sticky-border-elem-top"> Experience </th>
+                                                            <th class="mat-header-cell cdk-header-cell text-center cdk-column-Document mat-column-Document ng-star-inserted mat-table-sticky mat-table-sticky-border-elem-top">Description</th>
+                                                            <th class="mat-header-cell cdk-header-cell text-center cdk-column-Document mat-column-Document ng-star-inserted mat-table-sticky mat-table-sticky-border-elem-top">Experience Certificate	</th>
+                                                            <th class="mat-header-cell cdk-header-cell px-2 cdk-column-Action mat-column-Action ng-star-inserted mat-table-sticky mat-table-sticky-border-elem-top mat-table-sticky-border-elem-left" style="top: 0px; z-index: 101; left: 0px;"> Actions </th>
+
+                                                        </tr>
+
+                                                    </thead>
+                                                    <tbody role="rowgroup">
+
+                                                        <tr class="mat-row mat-no-data-row ng-star-inserted" role="row">
+                                                            <td colspan="9999" class="text-muted no-results ng-star-inserted"><img src="~/images/No result found.svg" class="no-result-found"></td>
+
+                                                        </tr>
+
+                                                    </tbody>
+                                                    <tfoot role="rowgroup" class="mat-table-sticky" style="display: none; bottom: 0px; z-index: 10;">
+                                                    </tfoot>
+                                                </table>
+                                            </div>
+                                        </div>
+
+                                    </div>
+                                    <mat-paginator role="group" aria-label="Select page" class="mat-paginator">
+                                        <div class="mat-paginator-outer-container">
+                                            <div class="mat-paginator-container">
+                                                <div class="mat-paginator-page-size ng-star-inserted">
+                                                    <div class="mat-paginator-page-size-label"> Items per page: </div>
+                                                    <div class="div mat-paginator-page-size-select ng-tns-c111-1083 mat-primary div-type-mat-select div-appearance-legacy div-can-float div-should-float div-hide-placeholder ng-star-inserted">
+                                                        <div class="div-wrapper ng-tns-c111-1083">
+                                                            <div class="div-flex ng-tns-c111-1083">
+
+                                                                <div class="div-infix ng-tns-c111-1083">
+                                                                    <mat-select role="combobox" aria-autocomplete="none" aria-haspopup="true" class="mat-select ng-tns-c167-1084 ng-tns-c111-1083 ng-star-inserted" id="mat-select-124" tabindex="0" aria-expanded="false" aria-label="Items per page:" aria-required="false" aria-disabled="false" aria-invalid="false">
+                                                                        <div cdk-overlay-origin="" class="mat-select-trigger ng-tns-c167-1084">
+                                                                            <div class="mat-select-value ng-tns-c167-1084" id="mat-select-value-125">
+
+                                                                                <span class="mat-select-value-text ng-tns-c167-1084 ng-star-inserted">
+                                                                                    <span class="mat-select-min-line ng-tns-c167-1084 ng-star-inserted">10</span>
+                                                                                </span>
+
+                                                                            </div>
+                                                                            <div class="mat-select-arrow-wrapper ng-tns-c167-1084">
+                                                                                <div class="mat-select-arrow ng-tns-c167-1084"></div>
+                                                                            </div>
+                                                                        </div>
+
+                                                                    </mat-select>
+                                                                    <span class="div-label-wrapper ng-tns-c111-1083">
+
+                                                                    </span>
+                                                                </div>
+
+                                                            </div>
+                                                            <div class="div-underline ng-tns-c111-1083 ng-star-inserted"><span class="div-ripple ng-tns-c111-1083"></span></div>
+
+                                                            <div class="div-subscript-wrapper ng-tns-c111-1083">
+
+                                                                <div class="div-hint-wrapper ng-tns-c111-1083 ng-trigger ng-trigger-transitionMessages ng-star-inserted" style="opacity: 1; transform: translateY(0%);">
+
+                                                                    <div class="div-hint-spacer ng-tns-c111-1083"></div>
+                                                                </div>
+
+                                                            </div>
+                                                        </div>
+                                                    </div>
+
+                                                </div>
+
+                                                <div class="mat-paginator-range-actions">
+                                                    <div class="mat-paginator-range-label"> 0 of 0 </div>
+
+                                                    <button mat-icon-button="" type="button" class="mat-focus-indicator mat-tooltip-trigger mat-paginator-navigation-previous mat-icon-button mat-button-base mat-button-disabled" aria-label="Previous page" disabled="true">
+                                                        <span class="mat-button-wrapper">
+                                                            <svg viewBox="0 0 24 24" focusable="false" class="mat-paginator-icon">
+                                                                <path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"></path>
+                                                            </svg>
+                                                        </span>
+                                                        <span matripple="" class="mat-ripple mat-button-ripple mat-button-ripple-round"></span><span class="mat-button-focus-overlay"></span>
+                                                    </button>
+
+                                                    <button mat-icon-button="" type="button" class="mat-focus-indicator mat-tooltip-trigger mat-paginator-navigation-next mat-icon-button mat-button-base mat-button-disabled" aria-label="Next page" disabled="true">
+                                                        <span class="mat-button-wrapper">
+                                                            <svg viewBox="0 0 24 24" focusable="false" class="mat-paginator-icon">
+                                                                <path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"></path>
+                                                            </svg>
+                                                        </span>
+                                                        <span matripple="" class="mat-ripple mat-button-ripple mat-button-ripple-round"></span><span class="mat-button-focus-overlay"></span>
+                                                    </button>
+
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </mat-paginator>
+                                </div>
+                            </mat-card>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="modal fade" id="addExperienceModal">
+    <div class="modal-dialog efcModal">
+        <div class="modal-content">
+            <div class="rd-dialog-heading p-0">
+                Add Experience
+            </div>
+            <div class="row">
+                <div class="col-md-6 tabcol mb-1">
+                    <label class="rd-form-select-label mb-1">Organization *</label>
+                    <input type="text" class="form-control" placeholder="Enter Organization" />
+                </div>
+                <div class="col-md-6 tabcol mb-1">
+                    <label class="rd-form-select-label mb-1">Designation *</label>
+                    <input type="text" class="form-control" placeholder="Enter Designation" />
+                </div>
+                <div class="col-md-6 tabcol mb-1">
+                    <label class="rd-form-select-label mb-1">Start Year *</label>
+                    <select class="form-select">
+                        <option selected>Select Member</option>
+                        <option value="1">Admin Department</option>
+                        <option value="2">HR Department</option>
+                    </select>
+                </div>
+                <div class="col-md-6 tabcol mb-1">
+                    <label class="rd-form-select-label mb-1">End Year *</label>
+                    <select class="form-select">
+                        <option selected>Select Member</option>
+                        <option value="1">Admin Department</option>
+                        <option value="2">HR Department</option>
+                    </select>
+                </div>
+                <div class="col-md-12 tabcol mb-1">
+                    <label class="rd-form-select-label mb-1">Description *</label>
+                    <textarea type="text" class="form-control" placeholder="Enter Description"></textarea>
+                </div>
+                <div class="col-md-12 tabcol mb-1">
+                    <label class="rd-form-select-label mb-1">Upload Experience Certificate</label>
+                    <input type="file" class="form-control" placeholder="Enter Designation" />
+                </div>
+                <div class="col-md-12 tabcol">
+                    <div class="rd-alert-info-sm rd-alert-text-info text-start rd-mb-2 rd-mt-2">
+                        <span class="fw-bold">
+                            <mat-icon role="img" fontset="material-icons-outlined" class="mat-icon notranslate rd-alert-text-info material-icons-outlined mat-icon-no-color" aria-hidden="true" data-mat-icon-type="font" data-mat-icon-namespace="material-icons-outlined">info</mat-icon>
+                        </span>
+                        Accepted formats PNG,JPEG,PDF,DOCX,XLSX and file must be less than 5MB.
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer mt-2">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Submit</button>
+            </div>
+        </div>
     </div>
 </div>
